--- a/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
@@ -34,7 +34,7 @@
 
         <div class="row justify-content-center align-self-center">
           <button [ngClass]="{ 'btn-danger': !verif, 'btn-primary': verif }" type="button" class="btn"
-          onclick="return confirm ('¿Estas seguro que desea eliminar este interes?')" (click) = "delete()" routerLink="/app">Eliminar interes fotografico</button>
+           (click) = "delete()" >Eliminar interes fotografico</button>
         </div>
         <div class >.</div>
   
